Able to play video on demand

--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -10,13 +10,19 @@
     tools:context="quaintcabeza.dhurihunt.Playback"
     >
 
-    <VideoView
-        android:id="@+id/pertinent_video"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_above="@+id/linearLayout"
-        />
+        android:layout_alignParentTop="true"
+        >
+        <VideoView
+            android:id="@+id/pertinent_video"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            />
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
