--- a/app/src/main/res/layout/activity_clue_seeker.xml
+++ b/app/src/main/res/layout/activity_clue_seeker.xml
@@ -35,6 +35,7 @@
            android:onClick="onLeftClick"
            />
         <EditText
+           android:id="@+id/pass_phrase_text"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
