video launches on clue click, left button works

--- a/app/src/main/res/layout/activity_clue_seeker.xml
+++ b/app/src/main/res/layout/activity_clue_seeker.xml
@@ -17,6 +17,7 @@
         android:layout_alignParentTop="true"
         android:src="@drawable/dog"
         android:layout_above="@+id/linearLayout"
+        android:onClick="onClueClick"
         />
 
     <LinearLayout
